// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render statement with no expenses at all 1`] = `
<div>
  No expenses
</div>
`;

exports[`should render statement with only 1 expense (singular) 1`] = `
<div>
  1 expense for 0.54$
</div>
`;

exports[`should render statement with the sum of expenses (plural) 1`] = `
<div>
  3 expenses for 18.53$
</div>
`;
